--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -16,10 +16,18 @@
     position: fixed;
     display: flex;
     flex-direction: row;
-    background-color: white;
+    background-color: rgb(61, 38, 90);
     min-height: 6vh;
     min-width: 100%;
-  }
+}
+.Tabs-mobile{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(61, 38, 90);
+    min-height: 6vh;
+    min-width: 100vh;
+}
 .ButtonSize{
     min-width: 25%;
     min-height: 6vh;
