--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -26,7 +26,7 @@
     flex-direction: row;
     background-color: rgb(61, 38, 90);
     min-height: 6vh;
-    min-width: 100%;
+    min-width: 45.1vh;
 }
 .ButtonSize{
     min-width: 25%;
