--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -21,7 +21,7 @@
     font-size: calc(20px + 2vmin);
     display: flex;
     flex-direction: column;
-    min-width: 45%;
+    min-width: 45vw;
     align-items: center;
     justify-content: center;
 }
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: row;
     font-size: calc(10px + 2vmin);
-    max-width: 100%;
+    max-width: 100vw;
 
 }
 .pEmail{
