--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -18,7 +18,7 @@
     flex-direction: row;
     background-color: rgb(61, 38, 90);
     min-height: 6vh;
-    min-width: 100%;
+    min-width: 100vw;
 }
 .Tabs-mobile{
     position: fixed;
@@ -26,7 +26,7 @@
     flex-direction: row;
     background-color: rgb(61, 38, 90);
     min-height: 6vh;
-    min-width: 100%;
+    min-width: 100vw;
 }
 .ButtonSize{
     min-width: 25%;
