--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -25,6 +25,13 @@
     align-items: center;
     justify-content: center;
 }
+.ContactBackground{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 0, 7);
+    color: rgb(255, 255, 255);
+}
+
 .ContactsFormat{
     position: relative;
     display: flex;
