fixing header with % and vw

--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -1,5 +1,5 @@
 .btn{
-    min-width: 100%;
+    min-width: 25vw;
     min-height: 6vh;
     font-family: 'Times New Roman', Times, serif;
     font-size: 3vh;
