--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -24,11 +24,13 @@
     position: fixed;
     display: flex;
     flex-direction: row;
-    background-color: rgb(61, 38, 90);
+    background-color: rgb(68, 28, 1);
     min-height: 6vh;
     min-width: 100vw;
+    max-width: 100vw;
 }
 .ButtonSize{
     min-width: 25vw;
+    max-width: 35vw;
     min-height: 6vh;
 }
