--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -1,5 +1,6 @@
 .btn{
     min-width: 25vw;
+    max-width: 25vw;
     min-height: 6vh;
     font-family: 'Times New Roman', Times, serif;
     font-size: 3vh;
