--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -28,7 +28,7 @@
 .ContactBackground{
     display: flex;
     flex-direction: column;
-    background-color: rgb(0, 0, 7);
+    background-color: #020d18;
     color: rgb(255, 255, 255);
 }
 
@@ -40,18 +40,64 @@
     max-width: 100vw;
 
 }
-.pEmail{
+.LeftSide{
+    display: flex;
+    min-width: 50%;
+    
+}
+.LeftLinkContainer {
+    min-width: 50%; /* Ensure the container takes up the same space */
+    display: flex; /* Use flex to align the link */
+
+
+}
+
+.LeftLink{
+    display: inline-block; /* Ensure the link only takes the width of its content */
+    color: white;
+    white-space: nowrap; /* Prevent wrapping of text */
+}
+.LeftLink:hover{
+    color: blue;
+}
+.RightSide{
     display: flex;
     flex-direction: column;
+    position: relative;
+    min-width: 50%;
+}
+.RightLinkContainer {
+    min-width: 50%; /* Ensure the container takes up the same space */
+    display: flex; /* Use flex to align the link */
+}
+
+.RightLink{
+    display: inline-block; /* Ensure the link only takes the width of its content */
+    color: white;
+    white-space: nowrap; /* Prevent wrapping of text */
+}
+.RightLink:hover{
+    color: blue;
+    min-width: auto;
+}
+.ContactsFormatMobile{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font-size: calc(10px + 2vmin);
+    max-width: 100vw;
+
+}
+.pEmailMobile{
+    display: flex;
+    flex-direction: row;
     position: relative;
     min-width: 50%;
     
 }
-.sEmail{
+.sEmailMobile{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     position: relative;
     min-width: 50%;
-
-
 }
