--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -3,6 +3,7 @@
     max-width: 25vw;
     min-height: 6vh;
     font-family: 'Times New Roman', Times, serif;
+    justify-content: center;
     font-size: 3vh;
     background-color: rgb(230, 228, 228);
 }
