--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -14,6 +14,24 @@
 .btn:active{
     background-color:rgba(0, 81, 255, 0.514);
 }
+
+.btn_mobile{
+    min-width: 25vw;
+    max-width: 25vw;
+    min-height: 5vw;
+    font-family: 'Times New Roman', Times, serif;
+    justify-content: center;
+    font-size: 3vh;
+    background-color: rgb(230, 228, 228);
+}
+.btn_mobile:hover{
+    background-color: rgb(50, 50, 145);
+    color: white;
+}
+.btn_mobile:active{
+    background-color:rgba(0, 81, 255, 0.514);
+}
+
 .Tabs{
     position: fixed;
     display: flex;
