--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -18,10 +18,10 @@
 .btn_mobile{
     min-width: 25vw;
     max-width: 25vw;
-    min-height: 5vw;
+    min-height: 6vh;
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
-    font-size: 3vh;
+    font-size: 5vw;
     background-color: rgb(230, 228, 228);
 }
 .btn_mobile:hover{
