changing background color and fixing formating

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -28,7 +28,7 @@
 .ContactBackground{
     display: flex;
     flex-direction: column;
-    background-color: #020d18;
+    background-color: #021b36;
     color: rgb(255, 255, 255);
 }
 
