--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   flex-direction: column;
 }
 .Background {
-  background-color: black;
+  background-color: rgb(3, 6, 22);
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
