--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -5,14 +5,16 @@
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
     font-size: 3vh;
-    background-color: rgb(230, 228, 228);
+    background-color: rgb(7, 7, 7);
+    color: white;
+    font-weight: bold;
 }
 .btn:hover{
     background-color: rgb(50, 50, 145);
     color: white;
 }
 .btn:active{
-    background-color:rgba(0, 81, 255, 0.514);
+    background-color:rgba(194, 207, 5, 0.514);
 }
 
 .btn_mobile{
@@ -22,7 +24,7 @@
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
     font-size: 5vw;
-    background-color: rgb(230, 228, 228);
+    background: rgb(230, 228, 228);
 }
 .btn_mobile:hover{
     background-color: rgb(50, 50, 145);
