--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -24,7 +24,9 @@
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
     font-size: 5vw;
-    background: rgb(230, 228, 228);
+    background-color: rgb(7, 7, 7);
+    color: white;
+    font-weight: bold;
 }
 .btn_mobile:hover{
     background-color: rgb(50, 50, 145);
