--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 }
 .Background {
   background-color: rgb(3, 6, 22);
-  min-height: 100vh;
+  min-height: 95vh;
+  max-height: 95vh;
   min-width: 100vw;
   display: flex;
   flex-direction: column;
