--- a/src/functions/Functions.css
+++ b/src/functions/Functions.css
@@ -1,13 +1,14 @@
 .btn{
     min-width: 25vw;
     max-width: 25vw;
-    min-height: 6vh;
+    min-height: 5vh;
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
     font-size: 3vh;
-    background-color: rgb(7, 7, 7);
+    background-color: rgb(14, 38, 75);
     color: white;
     font-weight: bold;
+    border-radius: 10px;
 }
 .btn:hover{
     background-color: rgb(50, 50, 145);
@@ -17,44 +18,14 @@
     background-color:rgba(194, 207, 5, 0.514);
 }
 
-.btn_mobile{
-    min-width: 25vw;
-    max-width: 25vw;
-    min-height: 6vh;
-    font-family: 'Times New Roman', Times, serif;
-    justify-content: center;
-    font-size: 5vw;
-    background-color: rgb(7, 7, 7);
-    color: white;
-    font-weight: bold;
-}
-.btn_mobile:hover{
-    background-color: rgb(50, 50, 145);
-    color: white;
-}
-.btn_mobile:active{
-    background-color:rgba(0, 81, 255, 0.514);
-}
-
 .Tabs{
-    position: fixed;
     display: flex;
     flex-direction: row;
-    background-color: rgb(61, 38, 90);
-    min-height: 6vh;
     min-width: 100vw;
-}
-.Tabs-mobile{
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(68, 28, 1);
-    min-height: 6vh;
-    min-width: 100vw;
-    max-width: 100vw;
+    background-color: rgb(5, 14, 44);
 }
 .ButtonSize{
     min-width: 25vw;
     max-width: 25vw;
-    min-height: 6vh;
+    border-radius: 5px;
 }
